imp: Fix small issues for Edge
The input outline on Edge is too bold, and the color change of the
border is not visible. Ironically, it makes the focus state less
visible.

I also had a strange encoding error with the non-breaking spaces. I
wasn't able to reproduce though.

--- a/public/static/forms.css
+++ b/public/static/forms.css
@@ -51,6 +51,12 @@ input:focus {
     border-color: var(--color-turquoise-2);
 }
 
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus {
+    outline: none;
+}
+
 fieldset {
     margin-top: var(--space-medium);
     margin-bottom: var(--space-medium);
